--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-# RAG (Chroma Cloud + embeddings)
-chromadb
-langchain
-langchain-chroma
-langchain-openai
-langchain-text-splitters
-tiktoken
-
-# Env
-python-dotenv
-
-# Dev
-pytest
+pymongo[srv]>=3.11
+tiktoken>=0.5.0
+python-dotenv>=1.0.0
+openai>=1.0.0
+# Optional for PDF support:
+# pdfplumber>=0.10.0
